Enforced java 17 and fixed the resulting build errors